@@ -2,7 +2,10 @@ Revision history for Perl extension Tree-Simple-Manager.
 
 0.03
     * Tree::Simple::Manager
-      - added some methods to make subclassing more flexible
+      + added some methods to make subclassing more flexible
+      + added the tree_cache_path option to optionally store
+        a parsed tree using Storable
+        - added tests for this
 
 0.02 Thurs Jan 13 2005
     * Tree::Simple::Manager
